Fix favicon display with optimized 32x32 version
- Create favicon-32x32.svg for better browser compatibility
- Update index.html to use smaller favicon for tab display
- Add apple-touch-icon using logo.svg for iOS devices
- Add mask-icon for Safari pinned tabs
- All favicon files properly copied to dist during build

--- a/nba-who-am-i/apps/web/index.html
+++ b/nba-who-am-i/apps/web/index.html
@@ -10,7 +10,9 @@
     <meta name="description" content="WHERE YOU AT ?! Reconnais ces légendes de la NBA si t'as le game ! Jeu de devinettes basketball avec 5 niveaux de difficulté. Gamebreaker mode activé 🔥" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon-32x32.svg" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/logo.svg" />
+    <link rel="mask-icon" href="/favicon.svg" color="#FF6B35" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
